--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="index-itinerarios-t4.html" class="containerturnos-item">4º Turno</a>     
     </div>
 
-        <p >Dúvidas, reclamaçoes ou sujestoes referente aos fretados? Entre em contato <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1T3RoKI3RdfweqWVVOFV8kvQS8CQUUPf_aUnD8Fci3rq5lw/viewform" style="color: black; text-decoration:underline;" >clicando aqui</a></p>
+        <p >Dúvidas, reclamaçoes ou sugestoes referente aos fretados? Entre em contato <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1T3RoKI3RdfweqWVVOFV8kvQS8CQUUPf_aUnD8Fci3rq5lw/viewform" style="color: black; text-decoration:underline;" >clicando aqui</a></p>
        
 
 
