--- a/index-itinerarios-adm.html
+++ b/index-itinerarios-adm.html
@@ -36,6 +36,9 @@
         <a class="containerturnos-item">Parque Santana</a>
         <a class="containerturnos-item">Santo Antonio</a>
         <a class="containerturnos-item">Vila Popular</a>
+        <a class="containerturnos-item">Ouro Verde</a>
+        <a class="containerturnos-item">Barra Funda</a>
+        <a class="containerturnos-item">Dom Pedro</a>
     </div>
 
         <div id="overlay" class="overlay">
@@ -145,8 +148,6 @@
         // Carrega o CSV ao iniciar
         loadCSV();
     </script>
-
-
 
 </body>
 </html>
